# text-editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
old/: main_old.cpp
src/: buffer.cpp  buffer.h  color.cpp  color.h  input.cpp  input.h  main.cpp  window.cpp  window.h  windowcontroller.cpp  windowcontroller.h
